[gd_scene load_steps=5 format=3 uid="uid://cruh8bbcfvyvr"]

[ext_resource type="Texture2D" uid="uid://brp4euwugc18f" path="res://assets/background.png" id="1_blg2x"]
[ext_resource type="PackedScene" uid="uid://bt33j5dwxano3" path="res://scenes/top_ui.tscn" id="2_wrbvl"]
[ext_resource type="PackedScene" uid="uid://c2b3fmv5a4iv3" path="res://scenes/bottom_ui.tscn" id="3_ttlyh"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_4jr62"]

[node name="Game" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
offset_right = 576.0
offset_bottom = 1024.0
texture = ExtResource("1_blg2x")

[node name="top_ui" parent="." instance=ExtResource("2_wrbvl")]

[node name="bottom_ui" parent="." instance=ExtResource("3_ttlyh")]
offset_left = -2.0
offset_top = 931.0
offset_right = 574.0
offset_bottom = 1023.0

[node name="grid" type="Node2D" parent="."]
script = ExtResource("4_4jr62")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 2

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
